objects/ASI_MFM_Payment_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_AC_Remark__c</fullName>
        <description>MY Use</description>
        <label>A/C Remark</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Code_PL__c</fullName>
        <label>AP Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_MFM_AP_Group__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home Leave</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Staff Insurance</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Payroll Tax</fullName>
                </value>
                <value>
                    <fullName>Club Membership (Pre-approved by HR)</fullName>
                </value>
                <value>
                    <fullName>Other Benefits</fullName>
                </value>
                <value>
                    <fullName>Pension Fund</fullName>
                </value>
                <value>
                    <fullName>Relocation expenses</fullName>
                </value>
                <value>
                    <fullName>Other Direct Compensation</fullName>
                </value>
                <value>
                    <fullName>Accrued Salaries &amp; Wages</fullName>
                </value>
                <value>
                    <fullName>Accrued Staff bonus</fullName>
                </value>
                <value>
                    <fullName>Accrued Providen fund</fullName>
                </value>
                <value>
                    <fullName>Accrued Payroll Taxes</fullName>
                </value>
                <value>
                    <fullName>Overseas Travel - Airfare</fullName>
                </value>
                <value>
                    <fullName>Overseas Travel - Accomodation</fullName>
                </value>
                <value>
                    <fullName>Overseas Travel - Meals &amp; Others</fullName>
                </value>
                <value>
                    <fullName>Overseas Travel - Travel Visa</fullName>
                </value>
                <value>
                    <fullName>Overseas Travel - Taxi/Rail/Ferry</fullName>
                </value>
                <value>
                    <fullName>Local Travel - Taxi/Rail/Ferry</fullName>
                </value>
                <value>
                    <fullName>Local Travel - Automobile</fullName>
                </value>
                <value>
                    <fullName>Entertainment - Internal</fullName>
                </value>
                <value>
                    <fullName>Entertainment - External</fullName>
                </value>
                <value>
                    <fullName>Business Meeting - AEC/CODI</fullName>
                </value>
                <value>
                    <fullName>Business Meeting - Other</fullName>
                </value>
                <value>
                    <fullName>Business Meeting - HQ Recharged</fullName>
                </value>
                <value>
                    <fullName>Cafeteria</fullName>
                </value>
                <value>
                    <fullName>Recruitment</fullName>
                </value>
                <value>
                    <fullName>Training Course/Seminars fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an active AP Code.</errorMessage>
            <filterItems>
                <field>ASI_MFM_AP_Code__c.ASI_MFM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_AP_Code__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Group__c</fullName>
        <label>AP Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-specific</fullName>
                </value>
                <value>
                    <fullName>Payroll &amp; Benefits</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Entertainment</fullName>
                </value>
                <value>
                    <fullName>Staff expenses</fullName>
                </value>
                <value>
                    <fullName>Office Expenses</fullName>
                </value>
                <value>
                    <fullName>Outside Services</fullName>
                </value>
                <value>
                    <fullName>Other Expenses</fullName>
                </value>
                <value>
                    <fullName>Logistics Expenses</fullName>
                </value>
                <value>
                    <fullName>IT Expenses</fullName>
                </value>
                <value>
                    <fullName>Other Income &amp; expenses (OIE)</fullName>
                </value>
                <value>
                    <fullName>Non recurring expenses</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Suspense</fullName>
                </value>
                <value>
                    <fullName>Bao Feng Expenses</fullName>
                </value>
                <value>
                    <fullName>Communications Expenses</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Prepaid Expenses</fullName>
                </value>
                <value>
                    <fullName>Investments</fullName>
                </value>
                <value>
                    <fullName>Capital expenditure</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable and Accrued liabilities (Finance ONLY)</fullName>
                    <isActive>false</isActive>
                    <label>Accounts Payable and Accrued liabilities (Finance ONLY)</label>
                </value>
                <value>
                    <fullName>Building operating expenses</fullName>
                    <isActive>false</isActive>
                    <label>Building operating expenses</label>
                </value>
                <value>
                    <fullName>Corporate Tax (Finance ONLY)</fullName>
                    <isActive>false</isActive>
                    <label>Corporate Tax (Finance ONLY)</label>
                </value>
                <value>
                    <fullName>Income and Other Taxes Payables (Finance ONLY)</fullName>
                    <isActive>false</isActive>
                    <label>Income and Other Taxes Payables (Finance ONLY)</label>
                </value>
                <value>
                    <fullName>Logistic</fullName>
                    <isActive>false</isActive>
                    <label>Logistic</label>
                </value>
                <value>
                    <fullName>Misc Expenses</fullName>
                    <isActive>false</isActive>
                    <label>Misc Expenses</label>
                </value>
                <value>
                    <fullName>Office operating expenses</fullName>
                    <isActive>false</isActive>
                    <label>Office operating expenses</label>
                </value>
                <value>
                    <fullName>Other Income &amp; expenses items</fullName>
                    <isActive>false</isActive>
                    <label>Other Income &amp; expenses items</label>
                </value>
                <value>
                    <fullName>Other Non recurring income &amp; expenses</fullName>
                    <isActive>false</isActive>
                    <label>Other Non recurring income &amp; expenses</label>
                </value>
                <value>
                    <fullName>Other Personnel expenses</fullName>
                    <isActive>false</isActive>
                    <label>Other Personnel expenses</label>
                </value>
                <value>
                    <fullName>Other receivables (Finance ONLY)</fullName>
                    <isActive>false</isActive>
                    <label>Other receivables (Finance ONLY)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Remark__c</fullName>
        <label>AP Remark</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Account_Code__c</fullName>
        <label>Account Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual_Amount_Base_Currency__c</fullName>
        <label>Accrual Amount (Base Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual_Amount_PO_Currency__c</fullName>
        <label>Accrual Amount (PO Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual_Amount_Payment_Currency__c</fullName>
        <label>Accrual Amount (Payment Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Adjustment_Amount__c</fullName>
        <formula>ASI_MFM_Payment_Amount__c+ASI_MFM_VAT_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Amount_with_Tax__c</fullName>
        <formula>IF(Contains( RecordType.DeveloperName,&apos;ASI_MFM_PH&apos;) ,ASI_MFM_Payment_Amount__c *(1+ ASI_MFM_PO__r.ASI_MFM_VAT__c ) 
,  IF(Contains( RecordType.DeveloperName,&apos;ASI_MFM_KR&apos;) , ASI_MFM_Payment_Amount__c * ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c , ASI_MFM_Payment_Amount__c *(1+ ASI_MFM_Payment__r.ASI_MFM_VAT_Rate__c)) )</formula>
        <label>Amount with Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BC_Code__c</fullName>
        <label>BC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Allocation</label>
        <referenceTo>ASI_MFM_BU_Allocation__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an active BU Code.</errorMessage>
            <filterItems>
                <field>ASI_MFM_BU__c.ASI_MFM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_BU__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Beneficiary_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beneficiary Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>KR Payment Line Item</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR Payment Line Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Venue (KR), Wholesaler (KR)</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Payment Line Items (Beneficiary Customer)</relationshipLabel>
        <relationshipName>Payment_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Business_Unit__c</fullName>
        <label>Branch/Plant</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_MFM_Company__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>P830</fullName>
                </value>
                <value>
                    <fullName>J520</fullName>
                </value>
                <value>
                    <fullName>J530</fullName>
                </value>
                <value>
                    <fullName>J540</fullName>
                </value>
                <value>
                    <fullName>J550</fullName>
                </value>
                <value>
                    <fullName>J560</fullName>
                </value>
                <value>
                    <fullName>J570</fullName>
                </value>
                <value>
                    <fullName>J580</fullName>
                </value>
                <value>
                    <fullName>J590</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_POLineAmount__c</fullName>
        <label>PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_PrePaid_Amount_in_PO_Currency__c</fullName>
        <label>PrePaid Amount in PO Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Pre_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Cash_Amount_Payment_Rate__c</fullName>
        <formula>ASI_MFM_Paid_Amount_in_PO_Currency__c * ASI_MFM_Payment__r.ASI_MFM_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Amount (Payment Rate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Cashout_Payment_Amount__c</fullName>
        <label>Cashout Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Cashout_Payment_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Out Payment Number</label>
        <referenceTo>ASI_MFM_Payment__c</referenceTo>
        <relationshipLabel>Payment Line Items (Cash Out Payment Number)</relationshipLabel>
        <relationshipName>Payment_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Cashout_Payment_Payee__c</fullName>
        <label>Cashout Payment Payee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRK</fullName>
                </value>
                <value>
                    <fullName>PRKI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Complete_POL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete POL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Complete_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete PO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Cost_Centre_Code__c</fullName>
        <description>Logistic Department use: Company Code + 4P + 999 + Country Code</description>
        <label>Cost Centre Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Currency_Sys__c</fullName>
        <description>for CN payment line item input page display only</description>
        <label>Currency Sys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Currency__c</fullName>
        <formula>Text(ASI_MFM_Payment__r.ASI_MFM_Currency__c)</formula>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_DistributorAmount_in_POCurrency__c</fullName>
        <label>Distributor Amount in PO Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL_Date__c</fullName>
        <label>ETL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Effective__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Effective?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>ASI_MFM_Event__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Exchange_Rate__c</fullName>
        <formula>ASI_MFM_Payment__r.ASI_MFM_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_FX_Loss_Gain_from_P_L__c</fullName>
        <formula>if(ASI_MFM_Accrual_Amount_Base_Currency__c= null  || ASI_MFM_Accrual_Amount_Base_Currency__c=0 , 0,ASI_MFM_Cash_Amount_Payment_Rate__c - ASI_MFM_Paid_Amount_in_Base_Currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FX Loss/Gain from P&amp;L</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Finance_Verify_Save_Date__c</fullName>
        <label>Finance Verify Save Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_Paid_Amount_in_PO_Currency__c</fullName>
        <label>Paid Amount in PO Currency (PR Gulf)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_Payment_Amount_Include_VAT__c</fullName>
        <label>Payment Amount (Include VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_Payment_Amount_PR_Gulf__c</fullName>
        <formula>ASI_MFM_Payment_Amount__c -  ASI_MFM_Payment_Amount_Distributor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount (PR Gulf)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_VAT_Amount__c</fullName>
        <formula>ASI_MFM_GF_Payment_Amount_Include_VAT__c - ASI_MFM_GF_Payment_Amount_PR_Gulf__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_VAT_Rate__c</fullName>
        <label>VAT Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VAT5 (5%)</fullName>
                </value>
                <value>
                    <fullName>VAT0 (0%)</fullName>
                </value>
                <value>
                    <fullName>RCM5 (0%)</fullName>
                </value>
                <value>
                    <fullName>DIM5 (5%)</fullName>
                </value>
                <value>
                    <fullName>VATE (0%)</fullName>
                </value>
                <value>
                    <fullName>NOINP (0%)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_GL_Offset__c</fullName>
        <label>GL Offset</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A221</fullName>
                </value>
                <value>
                    <fullName>A223</fullName>
                </value>
                <value>
                    <fullName>A250</fullName>
                </value>
                <value>
                    <fullName>A398</fullName>
                </value>
                <value>
                    <fullName>A425</fullName>
                </value>
                <value>
                    <fullName>A450</fullName>
                </value>
                <value>
                    <fullName>A590</fullName>
                </value>
                <value>
                    <fullName>A613</fullName>
                </value>
                <value>
                    <fullName>A629</fullName>
                </value>
                <value>
                    <fullName>A641</fullName>
                </value>
                <value>
                    <fullName>A674</fullName>
                </value>
                <value>
                    <fullName>A676</fullName>
                </value>
                <value>
                    <fullName>A777</fullName>
                </value>
                <value>
                    <fullName>A865</fullName>
                </value>
                <value>
                    <fullName>A902</fullName>
                </value>
                <value>
                    <fullName>A903</fullName>
                </value>
                <value>
                    <fullName>NOAP</fullName>
                </value>
                <value>
                    <fullName>PRAP</fullName>
                </value>
                <value>
                    <fullName>NOCL</fullName>
                </value>
                <value>
                    <fullName>NACL</fullName>
                </value>
                <value>
                    <fullName>PRAD</fullName>
                </value>
                <value>
                    <fullName>NOBP</fullName>
                </value>
                <value>
                    <fullName>NFCL</fullName>
                </value>
                <value>
                    <fullName>M334</fullName>
                </value>
                <value>
                    <fullName>M335</fullName>
                </value>
                <value>
                    <fullName>A334</fullName>
                </value>
                <value>
                    <fullName>A335</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_GST_Amount__c</fullName>
        <label>GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_G_L_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Due_Date__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Total__c</fullName>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Is_Accrual_PO__c</fullName>
        <formula>CONTAINS( ASI_MFM_PO_Line_Item__r.ASI_MFM_PO__r.RecordType.DeveloperName ,&quot;Accrual&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Accrual PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JDE_Dcoument_Type__c</fullName>
        <label>JDE Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JDE_Document_Company__c</fullName>
        <label>JDE Document Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JDE_Document_Number__c</fullName>
        <label>JDE Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JDE_Transaction_Number__c</fullName>
        <label>JDE Transaction Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_Tax_Explanation_Code__c</fullName>
        <formula>ASI_MFM_Tax_Code__r.ASI_MFM_Tax_Expl_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Explanation Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_subLedger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subledger</label>
        <referenceTo>ASI_TnE_Branch_Channel__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Subledger_payLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Last_Payment__c</fullName>
        <label>Last Payment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Last_Payment_chk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_MKTEXP_Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending Goods/Service Receipt</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Finance Verified</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_MY_Allow_duplicate_Inv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow duplicate Inv. #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Offset_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offset Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PH_A_P_Segmentation__c</fullName>
        <label>A&amp;P Segmentation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_POL_Receipt_Amount_Incl_Tax__c</fullName>
        <formula>ASI_MFM_POL_Receipt_Amount__c + ( ASI_MFM_POL_Receipt_Amount__c * ASI_MFM_Tax__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POL Receipt Amount (incl. Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_POL_Receipt_Amount__c</fullName>
        <label>Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_POSM_Balance__c</fullName>
        <formula>ASI_MFM_Payment__r.ASI_MFM_POSM_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POSM: Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_POSM_Deposit__c</fullName>
        <formula>ASI_MFM_Payment__r.ASI_MFM_POSM_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POSM: Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Amount__c</fullName>
        <label>POL Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Line_Currency__c</fullName>
        <label>POL Currency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Line_Description__c</fullName>
        <label>POL Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Line_Item__c</fullName>
        <label>PO Line Item</label>
        <referenceTo>ASI_MFM_PO_Line_Item__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Line_Remaining_Amount__c</fullName>
        <label>POL Remaining Amt.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Receipt_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Receipt Item</label>
        <referenceTo>ASI_MFM_PO_Receipt_Item__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Remark__c</fullName>
        <label>PO Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>